--- a/Src/index.html
+++ b/Src/index.html
@@ -127,7 +127,7 @@
                 <img src="../Resources/Img/SenaLogo.png" alt="" id="SenaLogo">
             </div>
 
-            <!-- Barra de navegacion -->
+            <!-- Barra de busqueda -->
             <form>
                 <div class="search-container">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -143,19 +143,19 @@
             <!-- Botones de navegacion -->
             <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
                 <div id="btnNavegationMenu">
-                    <button class="btn btn-primary" type="button" id="btnCheckCourse"><strong>Vizualizar
+                    <button class="menu-button" type="button" data-content="" id="btnCheckCourse"><strong>Vizualizar
                             fichas</strong></button>
-                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Ver
+                    <button class="menu-button" type="button" data-content="" id="btnCheckNotifications"><strong>Ver
                             notificaciones</strong></button>
-                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Plan
+                    <button class="menu-button" type="button" data-content="" id="btnFollowUpPlan"><strong>Plan
                             seguimiento</strong></button>
-                    <button class="btn btn-primary" type="button" id="btnCheckUserManual"><strong>¿Necesitas
+                    <button class="menu-button" type="button" data-content="" id="btnCheckUserManual"><strong>¿Necesitas
                             ayuda?</strong></button>
                 </div>
             </div>
         </div>
 
-        <!-- Espacio de trabajo de trabajo -->
+        <!-- Espacio de trabajo -->
         <div class="card d-flex justify-content-center" id="spaceWork">
 
             <!-- Encabezado -->
@@ -186,36 +186,35 @@
             <!-- Contenido modificable -->
             <div class="container d-flex flex-column mb-3" id="dynamicContentContainer" style="flex-wrap: wrap;">
 
-                <!-- Tarjeta dinámica de selección de ficha
-                    <div class="d-flex align-items-center mb-2" id="contentCard"
-                        style="width: 100%; max-width: 1100px;">
-                        <img src="../Resources/Img/FolderIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
-                        <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Ficha 2823217</strong>
-                        <div class="flex-grow-1">
-                        </div>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#optionModal" id="moreOptionBtn">
-                            <strong>Ver opciones</strong>
-                        </button>
-                    </div>-->
+                <!-- Tarjeta dinámica de selección de ficha -->
+                <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
+                    <img src="../Resources/Img/FolderIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
+                    <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Ficha 2823217</strong>
+                    <div class="flex-grow-1">
+                    </div>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#optionModal"
+                        id="moreOptionBtn">
+                        <strong>Ver opciones</strong>
+                    </button>
+                </div>
 
-                <!-- Tarjeta dinámica de notificación 
-                    <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
-                        <img src="../Resources/Img/NotificationIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
-                        <div class="text-left">
-                            <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Aprendiz en estado de
-                                riesgo</strong>
-                            <p class="card-text"><small class="text-body-secondary"
-                                    style="font-size: 20px; margin-left: 2vh;"><strong>Enviada 7 de octubre del 2024,
-                                        13:00</strong></small></p>
-                        </div>
-                        <div class="flex-grow-1">
-                        </div>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#notificationModal" id="moreOptionBtn">
-                            <strong>Ver notificación</strong>
-                        </button>
-                    </div> -->
+                <!-- Tarjeta dinámica de notificación  -->
+                <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
+                    <img src="../Resources/Img/NotificationIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
+                    <div class="text-left">
+                        <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Aprendiz en estado de
+                            riesgo</strong>
+                        <p class="card-text"><small class="text-body-secondary"
+                                style="font-size: 20px; margin-left: 2vh;"><strong>Enviada 7 de octubre del 2024,
+                                    13:00</strong></small></p>
+                    </div>
+                    <div class="flex-grow-1">
+                    </div>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#notificationModal" id="moreOptionBtn">
+                        <strong>Ver notificación</strong>
+                    </button>
+                </div>
 
                 <!-- Tarjeta dinámica de nombre de aprendiz -->
                 <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
@@ -228,12 +227,26 @@
                         <strong>Ver historial</strong>
                     </button>
                 </div>
+
+                <!-- Tarjeta dinámica de nombre de aprendiz -->
+                <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
+                    <img src="../Resources/Img/QuestionIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
+                    <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">¿Cómo funciona la
+                        plataforma?</strong>
+                    <div class="flex-grow-1">
+                    </div>
+                    <button type="button" class="btn btn-primary" id="btnUploadFile">
+                        <strong>Ver manual</strong>
+                    </button>
+                </div>
+
             </div>
 
             <!-- Pie de pagina -->
             <p class="pie-de-pagina" style="color:#989898; font-size: 20px; margin: 1vh;">
                 <strong>2024 - Servicio Nacional de Aprendizaje Sena</strong>
             </p>
+
         </div>
 
         <!-- Modal  de falta de datos ingresados -->
@@ -533,18 +546,21 @@
                             id="asistContainer" style="height: auto;">
 
                             <form>
-                                <label for="fileUpload" class="btn btn-primary">
-                                  Subir documento
+                                <label for="fileUpload"
+                                    class="btn btn-primary align-items-center justify-content-center"
+                                    id="btnUploadFile">
+                                    <strong>Subir documento</strong>
                                 </label>
                                 <input type="file" id="fileUpload" style="display: none;">
                             </form>
-                              
 
                         </div>
 
                     </div>
 
                     <div class="modal-footer justify-content-center" style="width: 100%;">
+                        <button type="button" class="btn btn-primary" id="btnSendMessage"><strong>Enviar
+                                respuesta</strong></button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                             id="btnCloseModal"><strong>Cerrar</strong></button>
                     </div>
@@ -558,7 +574,9 @@
 
 
     <!-- Scripts -->
-    <script src="app.js"></script>
+    <script src="../Resources/Documents/UserManual.pdf"></script>
+
+    <script src="view.js"></script>
     <script src="Model/Model.js"></script>
     <script src="View/View.js"></script>
     <script src="Controller/Controler.js"></script>
